--- a/frontend/src/app/home/components/post-card/components/post-gallery/post-gallery.html
+++ b/frontend/src/app/home/components/post-card/components/post-gallery/post-gallery.html
@@ -1,6 +1,4 @@
-<div class="post-images" *ngFor="let mediaPath of post.mediaPaths">
-    <ng-container [ngSwitch]="getMediaType(mediaPath)">
-        <img *ngSwitchCase="'img'" [src]="'http://localhost:8080/' + mediaPath" width="300" />
-        <video *ngSwitchCase="'vd'" [src]="'http://localhost:8080/' + mediaPath" controls width="300"></video>
-    </ng-container>
+<div class="post-images" *ngFor="let media of post.mediaPaths">
+    <img *ngIf="isImage(media.type)" [src]="'http://localhost:8080/' + media.path" width="300" />
+    <video *ngIf="isVideo(media.type)" [src]="'http://localhost:8080/' + media.path" controls width="300"></video>
 </div>
