--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -3,21 +3,11 @@
     <div *ngIf="toastMessage" class="toast-message" [ngClass]="{
         'toast-success': toastMessage.type === 'success',
         'toast-error': toastMessage.type === 'error',
-        'toast-warning': toastMessage.type === 'warning'
-}">
-        <!-- Success Icon -->
+        'toast-warning': toastMessage.type === 'warning'}">
         <i *ngIf="toastMessage.type === 'success'" class="bi bi-check-circle-fill text-success fs-5"></i>
-
-        <!-- Error Icon -->
         <i *ngIf="toastMessage.type === 'error'" class="bi bi-x-circle-fill text-danger fs-5"></i>
-
-        <!-- Warning Icon -->
         <i *ngIf="toastMessage.type === 'warning'" class="bi bi-exclamation-triangle-fill text-warning fs-5"></i>
-
-        <!-- Toast Message -->
         <span class="ms-2">{{ toastMessage.text }}</span>
-
-        <!-- Close Button -->
         <button class="close-toast-btn btn-link p-0 ms-2" (click)="toastMessage = null">
             <i class="bi bi-x-lg text-secondary"></i>
         </button>
@@ -43,7 +33,7 @@
                         <span class="stat-label">Followers</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-value">{{this.profileRes.following}}</span>
+                        <span class="stat-value">{{following}}</span>
                         <span class="stat-label">Following</span>
                     </div>
                 </div>
