--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,4 +1,5 @@
 <div class="components">
+    <app-toast></app-toast>
     <div class="sidebar-overlay" *ngIf="sidebarOpen" (click)="closeSidebar()"></div>
 
     <aside class="sidebar" [class.open]="sidebarOpen" *ngIf="showNavbar">
