--- a/frontend/src/app/auth/register/register.html
+++ b/frontend/src/app/auth/register/register.html
@@ -1,4 +1,4 @@
-<div class="register-container">
+<div *ngIf="show" class="register-container">
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center min-vh-100">
       <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
