--- a/frontend/src/app/notification/components/notification.html
+++ b/frontend/src/app/notification/components/notification.html
@@ -1,4 +1,4 @@
-<div class="notification-container container-fluid">
+<div *ngIf="show" class="notification-container container-fluid">
     <div class="row">
         <div class="col-12 col-lg-8 mx-auto">
             <h2>Notifications</h2>
