--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -92,7 +92,8 @@
                         <span>Add Photos</span>
                     </label>
                     <input id="file-input" type="file" (change)="onFileSelected($event)" multiple>
-                    <span *ngIf="selectedFiles.length > 0" class="file-count">{{selectedFiles.length}} photo(s)/video(s)</span>
+                    <span *ngIf="selectedFiles.length > 0" class="file-count">{{selectedFiles.length}}
+                        photo(s)/video(s)</span>
                 </div>
                 <button type="submit" class="submit-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -122,10 +123,13 @@
                         <!-- Post with image(s) - Image as background with overlay -->
                         <div *ngIf="post.mediaPaths && post.mediaPaths.length > 0" class="post-with-image">
                             <div class="post-image-wrapper">
-                                <img [src]="'http://localhost:8080/' + post.mediaPaths[0].path" alt="{{ post.title }}"
+                                <img *ngIf="post.mediaPaths[0].type.startsWith('image')"
+                                    [src]="'http://localhost:8080/' + post.mediaPaths[0].path" alt="{{ post.title }}"
                                     class="post-bg-image">
+                                <video *ngIf="post.mediaPaths[0].type.startsWith('video')"
+                                    [src]="'http://localhost:8080/' + post.mediaPaths[0].path"></video>
                                 <div class="post-image-overlay">
-                                    <h3 class="post-title-overlay">{{post.title}}</h3>
+                                    <h3 class="post-title-overlay text-break">{{post.title}}</h3>
                                 </div>
                             </div>
                             <div class="py-3 px-4 bg-body">
@@ -176,9 +180,9 @@
                                 </div>
                             </div>
 
-                            <div class="post-content">
+                            <div class="post-content text-break">
                                 <h3>{{post.title}}</h3>
-                                <p class="post-preview">{{post.content}}...</p>
+                                <p class="post-preview text-break">{{post.content}}...</p>
                             </div>
 
                             <div class="post-actions" (click)="$event.stopPropagation()">
@@ -202,4 +206,5 @@
             </div>
         </div>
     </div>
+    <div #anchor class="loading-trigger"></div>
 </div>
