--- a/frontend/src/app/me/components/me.html
+++ b/frontend/src/app/me/components/me.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="post-content">
+                <label for="post-content text-break">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         viewBox="0 0 16 16">
                         <path
