--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -172,7 +172,7 @@
                             <img [src]="'http://localhost:8080/' + post.mediaPaths[0].path" alt="{{ post.title }}"
                                 class="post-bg-image">
                             <div class="post-image-overlay">
-                                <h3 class="post-title-overlay">{{post.title}}</h3>
+                                <h3 class="post-title-overlay text-break">{{post.title}}</h3>
                             </div>
                         </div>
                         <div class="post-footer-info">
@@ -219,7 +219,7 @@
                             </div>
                         </div>
 
-                        <div class="post-content">
+                        <div class="post-content text-break">
                             <h3>{{post.title}}</h3>
                             <p class="post-preview">{{post.content}}</p>
                         </div>
